Refactor and format CustomOption to fix spotbugs reported issues.
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>